Fixed screen jumping when scrolling the navbar into the sticky position.

--- a/CSS/all.css
+++ b/CSS/all.css
@@ -48,7 +48,7 @@ h2 {
 
     background:#972337;
     color:#fff;
-    height:66px;
+    /* height:66px; */
     line-height:30px;
     letter-spacing:1px;
 	z-index: 8000;
