--- a/CSS/login.css
+++ b/CSS/login.css
@@ -20,7 +20,7 @@ h1 {
         margin-top: 10px;
 		width: 80%;
 		height:20px;
-		
+
 
 }
 
@@ -50,7 +50,7 @@ h1 {
 .warning {
 		color: red;
 		font-size: 14px;
-		
+
 }
 
 @media screen and (max-width:200px) {
@@ -60,16 +60,16 @@ border-style: inset;
 border-width: 5px;
 border-color: #333;
 width: 100px;
-height: auto
+height: auto;
 padding: 10px;
 margin-top: 5px;
 }
-  
+
 .text-box {
         margin-top: 10px;
 		width: 70%;
 }
-  
+
 }
 
 
